--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <div class="app-container">
   <app-header></app-header>
   <app-hero-section></app-hero-section>
+  <app-quick-actions></app-quick-actions>
   <app-featured-insurances></app-featured-insurances>
-  <app-pyme-section></app-pyme-section>
   <app-footer></app-footer>
 </div>
+
+
+
+
 
 
 
