--- a/src/app/components/hero-section/hero-section.component.html
+++ b/src/app/components/hero-section/hero-section.component.html
@@ -45,10 +45,7 @@
               aria-label="Buscar"
               (click)="onSearch()"
             >
-              <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
-                <path d="m13.498 12.076-.005.005-.005.004a1 1 0 0 1-1.414 0l-3.5-3.5a1 1 0 0 1 0-1.414l.005-.005.004-.005a1 1 0 0 1 1.414 0l3.5 3.5a1 1 0 0 1 0 1.415z"/>
-                <path d="M6.5 0a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM1 6.5a5.5 5.5 0 1 1 11 0 5.5 5.5 0 0 1-11 0z"/>
-              </svg>
+              <img src="assets/Image/Iconos/Banner/Lupa.png" alt="" class="search-icon-img" />
             </button>
           </div>
 
@@ -116,10 +113,11 @@
             <img 
               class="banner-image"
               src="assets/Image/Banner/Banner-desktop.png" 
-              alt="Banner promocional Seguros Bolívar"
+              alt="Banner promocional Seguros Bolívar - Familia feliz revisando documentos"
               loading="eager"
               fetchpriority="high"
               decoding="async"
+              style="display: block; width: 100%; height: 100%; object-fit: contain;"
             >
           </picture>
         </div>
